some fix error fieds and overflow image preview

--- a/src/components/AddRecipeImage/AddRecipeImage.module.css
+++ b/src/components/AddRecipeImage/AddRecipeImage.module.css
@@ -13,6 +13,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .photoUpload > img {
@@ -50,6 +51,14 @@
   }
 
 .uploadText {
+  text-decoration: underline;
+  font-size: 14px;
+  color: var(--title-color);
+}
+
+.reupload {
+  margin-top: 16px;
+  display: block;
   text-decoration: underline;
   font-size: 14px;
   color: var(--title-color);
